--- a/test.html
+++ b/test.html
@@ -88,6 +88,12 @@
     .drawing-board {
       border: 1px solid lightgray;
     }
+    fieldset {
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+      z-index: 999;
+    }
   </style>
   <body>
     <div class="videos-wrapper">
