--- a/test.html
+++ b/test.html
@@ -73,6 +73,11 @@
       width: 100%;
       height: 100vh;
     }
+
+    .videos-container > div {
+      max-height: 16.6vh;
+    }
+
     .videos-wrapper {
       display: flex;
       justify-content: center;
